# terminal

./: .gitignore  .index.yaml  .mcp.json  .pre-commit-config.yaml  ARCHITECTURE_REDESIGN.md  CLAUDE.md  NEXT_SESSION_FIX.md  README.md  TOUCH_SCROLLING_DEBUG.md  backup-index.json  pyproject.toml
.claude/rules/: learned-patterns.md  testing.md  websocket-protocol.md
.claude/session-state/: pane-architecture-refactor.md
.summitflow/: context.json
backups/: terminal_sessions_20251230-041258.sql
frontend/: .gitignore  TESTING_WORKFLOWS.md  biome.json  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: AdHocTab.tsx  ClaudeIndicator.tsx  ClaudeLoadingOverlay.tsx  ConfirmationDialog.tsx  DraggablePane.tsx  FileUploadDropzone.tsx  GlobalActionMenu.tsx  GridCell.tsx  GridLayout.tsx  KeyboardShortcuts.tsx  LayoutModeButton.tsx  ModeToggle.tsx  PaneOverflowMenu.tsx  PaneSwapDropdown.tsx  ProjectSettingsModal.tsx  ProjectTab.tsx  PromptCleaner.module.css  PromptCleaner.tsx  PromptCleanerTrigger.tsx  ResizablePaneLayout.tsx  SessionInfoIcon.tsx  SessionTabBar.tsx  SettingsDropdown.tsx  SingleModeTerminals.tsx  SortableProjectRow.tsx  SplitPane.tsx  TabActionMenu.tsx  TabBar.tsx  TabModeDropdown.tsx  Terminal.tsx  TerminalHeader.tsx  TerminalLayoutRenderer.tsx  TerminalManagerModal.tsx  (+7 more)
scripts/: backup.sh  dev-tools.sh  rebuild.sh  restart.sh  restore.sh  sf-commit.sh  shutdown.sh  start.sh  status.sh  tclaude
spec/: fix-spec-to-task-pipeline.md  spec.json  spec.md  terminal-improvements-spec.json  terminal-ui-overhaul-spec.json
terminal/: __init__.py  __main__.py  config.py  constants.py  logging_config.py  main.py
(+129 files in other folders)
