[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "summitflow-terminal"
version = "0.1.0"
description = "SummitFlow Terminal Service - Independent web terminal microservice"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "psycopg[binary,pool]>=3.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["terminal"]
